kubeCarlosDeploy/carlos_grafana_dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: carlos
  name: carlos-grafana-deployment
  labels:
    app: carlos-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carlos-grafana
  template:
    metadata:
      labels:
        app: carlos-grafana
    spec:
      containers:
      - name: carlos-grafana
        image: grafana/grafana:9.4.7
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: datasources
          mountPath: /etc/grafana/provisioning
          subPath: carlos-datasource.yml

      volumes:
      - name: datasources
        configMap:
          name: carlos-grafana-datasource-config
