kubeCarlosDeploy/carlos_loki_dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: carlos
  name: carlos-loki-deployment
  labels:
    app: carlos-loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carlos-loki
  template:
    metadata:
      labels:
        app: carlos-loki
    spec:
      containers:
      - name: carlos-loki
        image: grafana/loki:2.8.0
        command: ['-config.file=/etc/loki/local-config.yaml']
        ports:
        - containerPort: 3100
