kubeCarlosDeploy/carlos-collector-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: carlos
  name: carlos-collector-service
spec:
  type: ClusterIP
  selector:
    app: carlos-collector
  ports:
    - port: 4317
      targetPort: 4317
