kubeCarlosDeploy/carlos_grafana_svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: carlos
  name: carlos-grafana-service
spec:
  type: ClusterIP
  selector:
    app: carlos-grafana
  ports:
    - port: 3100
      targetPort: 3100
