kubeCarlosDeploy/carlos_loki_svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: carlos
  name: carlos-loki-service
spec:
  type: ClusterIP
  selector:
    app: carlos-loki
  ports:
    - port: 3100
      targetPort: 3100
