kubeCarlosDeploy/carlos_web_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: carlos
  name: carlos-web-ingress
  annotations:
    cert-managaer/io/cluster-issuer: cert-manager-webhook-duckdns-carlos-production
spec:
  ingressClassName: nginx
  rules:
  - host: 
    - carlos-kube.duckdns.org
    secretName: carlos-kube-tls-carlos-production
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: carlos-web-service
            port:
              number: 80
